added table & modified output

--- a/anniversary.ipynb
+++ b/anniversary.ipynb
@@ -44,13 +44,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      " pi = 3.141592653589793 (Kreiszahl)\n",
-      "  e = 2.718281828459045 (Eulersche Zahl)\n",
-      "  d = 4.66920160910299 (Feigenbaum constant)\n",
-      "phi = 1.618033988749895 (goldener Schnitt)\n"
+      " pi = 3.141592653589793 (Kreiszahl)\n  e = 2.718281828459045 (Eulersche Zahl)\n  d = 4.66920160910299 (Feigenbaum constant)\nphi = 1.618033988749895 (goldener Schnitt)\n"
      ]
     }
    ],
@@ -128,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +179,7 @@
     "                             r\"}$\")\n",
     "                \n",
     "                # ...append it to the list of nice anniversaries\n",
-    "                special_dates.append(((begin_date + dt.timedelta(days=x)).strftime(\"%-d. %b %Y\"), latex, x / 365.2425, diff))"
+    "                special_dates.append(((begin_date + dt.timedelta(days=x)).strftime(\"%-d. %b %Y\"), x / 365.2425, diff, latex))"
    ]
   },
   {
@@ -194,17 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "md_string = \"\"\"\n",
-    "| Date | Display | Value [Years] | Difference [Days] |\n",
-    "| :--- | ------: | ------------: | ----------------: |\n",
+    "| Date | Value [Years] | Difference [Days] | Display | Rating |\n",
+    "| :--- | ------------: | ----------------: | ------: | -----: |\n",
     "\"\"\"\n",
     "\n",
     "for sd in special_dates:\n",
-    "    md_string += f\"\"\"| {sd[0]} | {sd[1]} | {sd[2]:.2f} | {sd[3]:.2f} |\\n\"\"\""
+    "    md_string += f\"\"\"| {sd[0]} | {sd[1]:.2f} | {sd[2]:.2f} | {sd[3]} |  |\\n\"\"\""
    ]
   },
   {
@@ -216,43 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
-      "text/markdown": [
-       "\n",
-       "| Date | Display | Value [Years] | Difference [Days] |\n",
-       "| :--- | ------: | ------------: | ----------------: |\n",
-       "| 18. Dec 2020 | $\\frac{9\\pi^3}{8e^2}$ | 4.72 | 0.23 |\n",
-       "| 31. Dec 2020 | $\\frac{7e}{4}$ | 4.76 | 0.46 |\n",
-       "| 14. Jan 2021 | $\\frac{3e^3}{4\\pi}$ | 4.79 | 0.36 |\n",
-       "| 15. Jan 2021 | $\\frac{3e^3}{4\\pi}$ | 4.80 | 0.64 |\n",
-       "| 6. Mar 2021 | $\\frac{\\pi^2}{2}$ | 4.93 | 0.40 |\n",
-       "| 7. Mar 2021 | $\\frac{\\pi^2}{2}$ | 4.94 | 0.60 |\n",
-       "| 7. Apr 2021 | $\\frac{e^3}{4}$ | 5.02 | 0.02 |\n",
-       "| 8. Apr 2021 | $\\frac{e^3}{4}$ | 5.02 | 0.98 |\n",
-       "| 1. May 2021 | $\\frac{5e^3}{2\\pi^2}$ | 5.09 | 0.25 |\n",
-       "| 26. Jun 2021 | $\\frac{7e^2}{\\pi^2}$ | 5.24 | 0.12 |\n",
-       "| 28. Jun 2021 | $\\frac{5\\pi^3}{4e^2}$ | 5.25 | 0.19 |\n",
-       "| 15. Jul 2021 | $\\frac{9e^2}{4\\pi}$ | 5.29 | 0.13 |\n",
-       "| 6. Sep 2021 | $2e$ | 5.44 | 0.34 |\n",
-       "| 9. Sep 2021 | $\\frac{3\\pi^2}{2e}$ | 5.45 | 0.20 |\n",
-       "| 28. Sep 2021 | $\\frac{7\\pi}{4}$ | 5.50 | 0.03 |\n",
-       "| 14. Oct 2021 | $\\frac{3e^2}{4}$ | 5.54 | 0.10 |\n",
-       "| 15. Oct 2021 | $\\frac{3e^2}{4}$ | 5.54 | 0.90 |\n",
-       "| 2. Nov 2021 | $\\frac{7e^3}{8\\pi}$ | 5.59 | 0.26 |\n",
-       "| 3. Nov 2021 | $\\frac{7e^3}{8\\pi}$ | 5.60 | 0.74 |\n",
-       "| 12. Dec 2021 | $\\frac{\\pi^3}{2e}$ | 5.70 | 0.08 |\n",
-       "| 13. Dec 2021 | $\\frac{\\pi^3}{2e}$ | 5.71 | 0.92 |\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "\n| Date | Value [Years] | Difference [Days] | Display | Rating |\n| :--- | ------------: | ----------------: | ------: | -----: |\n| 18. Dec 2020 | 4.72 | 0.23 | $\\frac{9\\pi^3}{8e^2}$ |  |\n| 31. Dec 2020 | 4.76 | 0.46 | $\\frac{7e}{4}$ |  |\n| 14. Jan 2021 | 4.79 | 0.36 | $\\frac{3e^3}{4\\pi}$ |  |\n| 15. Jan 2021 | 4.80 | 0.64 | $\\frac{3e^3}{4\\pi}$ |  |\n| 6. Mar 2021 | 4.93 | 0.40 | $\\frac{\\pi^2}{2}$ |  |\n| 7. Mar 2021 | 4.94 | 0.60 | $\\frac{\\pi^2}{2}$ |  |\n| 7. Apr 2021 | 5.02 | 0.02 | $\\frac{e^3}{4}$ |  |\n| 8. Apr 2021 | 5.02 | 0.98 | $\\frac{e^3}{4}$ |  |\n| 1. May 2021 | 5.09 | 0.25 | $\\frac{5e^3}{2\\pi^2}$ |  |\n| 26. Jun 2021 | 5.24 | 0.12 | $\\frac{7e^2}{\\pi^2}$ |  |\n| 28. Jun 2021 | 5.25 | 0.19 | $\\frac{5\\pi^3}{4e^2}$ |  |\n| 15. Jul 2021 | 5.29 | 0.13 | $\\frac{9e^2}{4\\pi}$ |  |\n| 6. Sep 2021 | 5.44 | 0.34 | $2e$ |  |\n| 9. Sep 2021 | 5.45 | 0.20 | $\\frac{3\\pi^2}{2e}$ |  |\n| 28. Sep 2021 | 5.50 | 0.03 | $\\frac{7\\pi}{4}$ |  |\n| 14. Oct 2021 | 5.54 | 0.10 | $\\frac{3e^2}{4}$ |  |\n| 15. Oct 2021 | 5.54 | 0.90 | $\\frac{3e^2}{4}$ |  |\n| 2. Nov 2021 | 5.59 | 0.26 | $\\frac{7e^3}{8\\pi}$ |  |\n| 3. Nov 2021 | 5.60 | 0.74 | $\\frac{7e^3}{8\\pi}$ |  |\n| 12. Dec 2021 | 5.70 | 0.08 | $\\frac{\\pi^3}{2e}$ |  |\n| 13. Dec 2021 | 5.71 | 0.92 | $\\frac{\\pi^3}{2e}$ |  |\n"
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     }
    ],
    "source": [
@@ -268,14 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(\"/home/rmnldwg/OneDrive/Desktop/anniversaries.md\", 'w')\n",
+    "file = open(\"/home/rmnldwg/OneDrive/Git/rmnldwg/anniversary/table.md\", 'w')\n",
     "file.write(md_string)\n",
     "file.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -294,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.6-final"
   },
   "toc": {
    "base_numbering": 1,
