computing nice anniversaries for next year

--- a/anniversary.ipynb
+++ b/anniversary.ipynb
@@ -44,10 +44,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      " pi = 3.141592653589793 (Kreiszahl)\n  e = 2.718281828459045 (Eulersche Zahl)\n  d = 4.66920160910299 (Feigenbaum constant)\nphi = 1.618033988749895 (goldener Schnitt)\n"
+      " pi = 3.141592653589793 (Kreiszahl)\n",
+      "  e = 2.718281828459045 (Eulersche Zahl)\n",
+      "  d = 4.66920160910299 (Feigenbaum constant)\n",
+      "phi = 1.618033988749895 (goldener Schnitt)\n"
      ]
     }
    ],
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +216,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\n| Date | Value [Years] | Difference [Days] | Display | Rating |\n| :--- | ------------: | ----------------: | ------: | -----: |\n| 18. Dec 2020 | 4.72 | 0.23 | $\\frac{9\\pi^3}{8e^2}$ |  |\n| 31. Dec 2020 | 4.76 | 0.46 | $\\frac{7e}{4}$ |  |\n| 14. Jan 2021 | 4.79 | 0.36 | $\\frac{3e^3}{4\\pi}$ |  |\n| 15. Jan 2021 | 4.80 | 0.64 | $\\frac{3e^3}{4\\pi}$ |  |\n| 6. Mar 2021 | 4.93 | 0.40 | $\\frac{\\pi^2}{2}$ |  |\n| 7. Mar 2021 | 4.94 | 0.60 | $\\frac{\\pi^2}{2}$ |  |\n| 7. Apr 2021 | 5.02 | 0.02 | $\\frac{e^3}{4}$ |  |\n| 8. Apr 2021 | 5.02 | 0.98 | $\\frac{e^3}{4}$ |  |\n| 1. May 2021 | 5.09 | 0.25 | $\\frac{5e^3}{2\\pi^2}$ |  |\n| 26. Jun 2021 | 5.24 | 0.12 | $\\frac{7e^2}{\\pi^2}$ |  |\n| 28. Jun 2021 | 5.25 | 0.19 | $\\frac{5\\pi^3}{4e^2}$ |  |\n| 15. Jul 2021 | 5.29 | 0.13 | $\\frac{9e^2}{4\\pi}$ |  |\n| 6. Sep 2021 | 5.44 | 0.34 | $2e$ |  |\n| 9. Sep 2021 | 5.45 | 0.20 | $\\frac{3\\pi^2}{2e}$ |  |\n| 28. Sep 2021 | 5.50 | 0.03 | $\\frac{7\\pi}{4}$ |  |\n| 14. Oct 2021 | 5.54 | 0.10 | $\\frac{3e^2}{4}$ |  |\n| 15. Oct 2021 | 5.54 | 0.90 | $\\frac{3e^2}{4}$ |  |\n| 2. Nov 2021 | 5.59 | 0.26 | $\\frac{7e^3}{8\\pi}$ |  |\n| 3. Nov 2021 | 5.60 | 0.74 | $\\frac{7e^3}{8\\pi}$ |  |\n| 12. Dec 2021 | 5.70 | 0.08 | $\\frac{\\pi^3}{2e}$ |  |\n| 13. Dec 2021 | 5.71 | 0.92 | $\\frac{\\pi^3}{2e}$ |  |\n"
+      "text/markdown": [
+       "\n",
+       "| Date | Value [Years] | Difference [Days] | Display | Rating |\n",
+       "| :--- | ------------: | ----------------: | ------: | -----: |\n",
+       "| 6. Sep 2021 | 5.44 | 0.34 | $2e$ |  |\n",
+       "| 9. Sep 2021 | 5.45 | 0.20 | $\\frac{3\\pi^2}{2e}$ |  |\n",
+       "| 28. Sep 2021 | 5.50 | 0.03 | $\\frac{7\\pi}{4}$ |  |\n",
+       "| 14. Oct 2021 | 5.54 | 0.10 | $\\frac{3e^2}{4}$ |  |\n",
+       "| 15. Oct 2021 | 5.54 | 0.90 | $\\frac{3e^2}{4}$ |  |\n",
+       "| 2. Nov 2021 | 5.59 | 0.26 | $\\frac{7e^3}{8\\pi}$ |  |\n",
+       "| 3. Nov 2021 | 5.60 | 0.74 | $\\frac{7e^3}{8\\pi}$ |  |\n",
+       "| 12. Dec 2021 | 5.70 | 0.08 | $\\frac{\\pi^3}{2e}$ |  |\n",
+       "| 13. Dec 2021 | 5.71 | 0.92 | $\\frac{\\pi^3}{2e}$ |  |\n",
+       "| 15. Feb 2022 | 5.88 | 0.37 | $\\frac{5e^2}{2\\pi}$ |  |\n",
+       "| 8. May 2022 | 6.11 | 0.10 | $\\frac{3e^3}{\\pi^2}$ |  |\n",
+       "| 12. May 2022 | 6.12 | 0.13 | $\\frac{9e}{4}$ |  |\n",
+       "| 30. May 2022 | 6.17 | 1.00 | $\\frac{5\\pi^2}{8}$ |  |\n",
+       "| 31. May 2022 | 6.17 | 0.00 | $\\frac{5\\pi^2}{8}$ |  |\n",
+       "| 12. Jul 2022 | 6.28 | 0.11 | $2\\pi$ |  |\n",
+       "| 16. Jul 2022 | 6.29 | 0.03 | $\\frac{3\\pi^3}{2e^2}$ |  |\n",
+       "| 7. Aug 2022 | 6.35 | 0.27 | $\\frac{7\\pi^2}{4e}$ |  |\n",
+       "| 21. Aug 2022 | 6.39 | 0.15 | $\\frac{e^3}{\\pi}$ |  |\n",
+       "| 22. Aug 2022 | 6.40 | 0.85 | $\\frac{e^3}{\\pi}$ |  |\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -238,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(\"/home/rmnldwg/OneDrive/Git/rmnldwg/anniversary/table.md\", 'w')\n",
+    "file = open(f\"./{dt.datetime.now():%Y-%m-%d}_table.md\", 'w')\n",
     "file.write(md_string)\n",
     "file.close()"
    ]
@@ -257,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
@@ -288,6 +316,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
