--- a/anniversary.ipynb
+++ b/anniversary.ipynb
@@ -34,8 +34,7 @@
    "source": [
     "import datetime as dt\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import display, Math, Markdown"
+    "from IPython.display import display, Markdown"
    ]
   },
   {
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +162,7 @@
     "            \n",
     "            diff = np.abs((x / 365.2425) - int_ratio[0]*alpha / (int_ratio[1]*beta)) * 365.2425\n",
     "            # if the approximation is close enough...\n",
-    "            if np.all(np.greater(10, int_ratio)) and alpha_base_txt != beta_base_txt and diff < 1.:\n",
+    "            if np.all(np.greater(10, int_ratio)) and alpha_base_txt != beta_base_txt and diff < 0.5:\n",
     "                txt = f\"{int_ratio[0]} * {alpha_base_txt}^{alpha_power} / {int_ratio[1]} * {beta_base_txt}^{beta_power}\"\n",
     "                \n",
     "                if (beta == 1.) & (int_ratio[1] == 1):\n",
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -225,25 +224,18 @@
        "\n",
        "| Date | Value [Years] | Difference [Days] | Display | Rating |\n",
        "| :--- | ------------: | ----------------: | ------: | -----: |\n",
-       "| 6. Sep 2021 | 5.44 | 0.34 | $2e$ |  |\n",
-       "| 9. Sep 2021 | 5.45 | 0.20 | $\\frac{3\\pi^2}{2e}$ |  |\n",
-       "| 28. Sep 2021 | 5.50 | 0.03 | $\\frac{7\\pi}{4}$ |  |\n",
-       "| 14. Oct 2021 | 5.54 | 0.10 | $\\frac{3e^2}{4}$ |  |\n",
-       "| 15. Oct 2021 | 5.54 | 0.90 | $\\frac{3e^2}{4}$ |  |\n",
-       "| 2. Nov 2021 | 5.59 | 0.26 | $\\frac{7e^3}{8\\pi}$ |  |\n",
-       "| 3. Nov 2021 | 5.60 | 0.74 | $\\frac{7e^3}{8\\pi}$ |  |\n",
-       "| 12. Dec 2021 | 5.70 | 0.08 | $\\frac{\\pi^3}{2e}$ |  |\n",
-       "| 13. Dec 2021 | 5.71 | 0.92 | $\\frac{\\pi^3}{2e}$ |  |\n",
-       "| 15. Feb 2022 | 5.88 | 0.37 | $\\frac{5e^2}{2\\pi}$ |  |\n",
-       "| 8. May 2022 | 6.11 | 0.10 | $\\frac{3e^3}{\\pi^2}$ |  |\n",
-       "| 12. May 2022 | 6.12 | 0.13 | $\\frac{9e}{4}$ |  |\n",
-       "| 30. May 2022 | 6.17 | 1.00 | $\\frac{5\\pi^2}{8}$ |  |\n",
-       "| 31. May 2022 | 6.17 | 0.00 | $\\frac{5\\pi^2}{8}$ |  |\n",
-       "| 12. Jul 2022 | 6.28 | 0.11 | $2\\pi$ |  |\n",
-       "| 16. Jul 2022 | 6.29 | 0.03 | $\\frac{3\\pi^3}{2e^2}$ |  |\n",
-       "| 7. Aug 2022 | 6.35 | 0.27 | $\\frac{7\\pi^2}{4e}$ |  |\n",
-       "| 21. Aug 2022 | 6.39 | 0.15 | $\\frac{e^3}{\\pi}$ |  |\n",
-       "| 22. Aug 2022 | 6.40 | 0.85 | $\\frac{e^3}{\\pi}$ |  |\n"
+       "| 25. Dec 2022 | 6.74 | 0.01 | $\\frac{9e^2}{\\pi^2}$ |  |\n",
+       "| 15. Jan 2023 | 6.80 | 0.08 | $\\frac{5e}{2}$ |  |\n",
+       "| 11. Mar 2023 | 6.95 | 0.23 | $\\frac{9\\pi^3}{2e^3}$ |  |\n",
+       "| 20. Apr 2023 | 7.06 | 0.16 | $\\frac{3e^2}{\\pi}$ |  |\n",
+       "| 25. Apr 2023 | 7.07 | 0.25 | $\\frac{9\\pi}{4}$ |  |\n",
+       "| 17. May 2023 | 7.13 | 0.15 | $\\frac{5\\pi^3}{8e}$ |  |\n",
+       "| 9. Jun 2023 | 7.19 | 0.04 | $\\frac{9e^3}{8\\pi}$ |  |\n",
+       "| 4. Jul 2023 | 7.26 | 0.26 | $\\frac{2\\pi^2}{e}$ |  |\n",
+       "| 3. Aug 2023 | 7.34 | 0.13 | $\\frac{7\\pi^3}{4e^2}$ |  |\n",
+       "| 20. Aug 2023 | 7.39 | 0.20 | $e^2$ |  |\n",
+       "| 25. Aug 2023 | 7.40 | 0.40 | $\\frac{3\\pi^2}{4}$ |  |\n",
+       "| 11. Oct 2023 | 7.53 | 0.03 | $\\frac{3e^3}{8}$ |  |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -274,18 +266,11 @@
     "file.write(md_string)\n",
     "file.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.8"
   },
   "toc": {
    "base_numbering": 1,
@@ -345,6 +330,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cb455f690b3abcb5791efd670febaa69fae9b43d7b1f1e30c8fec0fb3c8c29ed"
+   }
   }
  },
  "nbformat": 4,
